<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content" android:id="@+id/ConstraintLayout">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp">
        <TextView
                android:text="@string/name"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/nameTextView" android:layout_weight="1"/>
        <TextView
                android:text="@string/count"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/countTextView" android:layout_weight="1"/>
        <TextView
                android:text="@string/price"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/priceTextView" android:layout_weight="1"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
